--- a/Workflow/index.html
+++ b/Workflow/index.html
@@ -24,26 +24,7 @@
         </div>
         <div class="flow-box-content">
             <ul id="uList">
-                <li class="block-ks tag" data-index="1" Relation="2,3" data-type="line">
-                    <i class="icon"></i>
-                    <h3 class="block-title Modify">开始</h3>
-                    <span class="span-shut">×</span>
-                </li>
-                <li class="block-cl tag" data-index="2">
-                    <i class="icon"></i>
-                    <h3 class="block-title Modify">处理</h3>
-                    <span class="span-shut">×</span>
-                </li>
-                <li class="block-tz tag" data-index="3" Relation="4" data-type="line">
-                    <i class="icon"></i>
-                    <h3 class="block-title Modify">通知</h3>
-                    <span class="span-shut">×</span>
-                </li>
-                <div class="block-js tag" data-index="4" Relation="1" data-type="dashed">
-                    <i class="icon"></i>
-                    <h3 class="block-title Modify">结束</h3>
-                    <span class="span-shut">×</span>
-                </li>
+               
             </ul>
             
             <ul>
@@ -66,7 +47,8 @@
 </body>
 </html>
 <script src="jquery.js"></script>
-<script src="drawline.js"></script>
+<script src="DraggableLigature.js"></script>
+<script src="index.js"></script>
 <script>
 
 </script>
