--- a/DepthFirstSearch.html
+++ b/DepthFirstSearch.html
@@ -6,6 +6,7 @@
 	<style>
 		*{margin: 0; padding: 0;-webkit-user-select:none;}
 		html,body{height: calc(100% - 1px);border-top:1px solid #fff;}
+		.title{position: absolute;top:25px;left:20px;font-weight: bolder;color: #444;}
 		.continer{height: 50px;border:1px dashed #888;margin: 10px 10px 0;position: relative;
 		}
 		.action{line-height: 50px;text-align: center;}
@@ -54,7 +55,7 @@
 	</style>
 </head>
 <body>
-
+<span class="title">深度优先遍历</span>
 <div class="continer action">
 	<input type="text" id="txtNum">
 	<span onclick="setMapSize();">设置地图</span>
